# claude-admin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pl.md  README.pt.md  README.tr.md  README.zh.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
claude-admin-backend/: Cargo.toml  openapi.json
claude-admin-backend/src/: app.rs  lib.rs  main.rs
claude-admin-backend/src/domain/: errors.rs  extractors.rs  frontmatter.rs  mod.rs  validation.rs
claude-admin-backend/src/infra/: auth.rs  config.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs  rbac.rs
claude-admin-backend/src/routes/: advisor.rs  agents.rs  ai.rs  analytics.rs  audit.rs  backups.rs  budgets.rs  dashboard.rs  docs.rs  events.rs  export.rs  github.rs  health.rs  launch_profiles.rs  licenses.rs  mcp.rs  memory.rs  mod.rs  permissions.rs  plans.rs  plugins.rs  preview.rs  projects.rs  router.rs  rules.rs  search.rs  sessions.rs  settings.rs  skill_browser.rs  skills.rs  sync.rs  system_info.rs  system_prompts.rs  system_status.rs  templates.rs  timeline.rs  tool_access.rs  webhooks.rs  worktrees.rs
claude-admin-backend/src/services/: advisor.rs  analytics.rs  audit.rs  backups.rs  budgets.rs  claude_api.rs  config_health.rs  export.rs  file_ops.rs  fs_scanner.rs  github.rs  mcp.rs  mod.rs  permissions.rs  project_resolver.rs  search.rs  sessions.rs  skill_browser.rs  skill_builder.rs  sync.rs  system_info.rs  templates.rs  timeline.rs  watcher.rs  webhooks.rs
claude-admin-backend/tests/: integration_tests.rs
claude-admin-cli/: Cargo.toml
claude-admin-cli/src/: client.rs  main.rs
claude-admin-cli/src/commands/: analytics.rs  backups.rs  export_import.rs  mod.rs  rules.rs  skills.rs  status.rs
claude-admin-frontend/: Cargo.toml  index.html  style.css
claude-admin-frontend/src/: api.rs  app.rs  main.rs
claude-admin-frontend/src/components/: code_viewer.rs  confirm_dialog.rs  context_help.rs  diff_viewer.rs  editor_history.rs  file_tree.rs  footer.rs  frontmatter_form.rs  hook_pipeline.rs  json_editor.rs  keyboard_shortcuts.rs  language_selector.rs  live_reload.rs  markdown_editor.rs  mod.rs  modal.rs  onboarding.rs  sidebar.rs  theme_toggle.rs
claude-admin-frontend/src/components/project_tabs/: advisor_tab.rs  mod.rs
claude-admin-frontend/src/i18n/: de.rs  en.rs  es.rs  fr.rs  it.rs  ja.rs  ko.rs  mod.rs  nl.rs  pl.rs  pt.rs  tr.rs  zh.rs
claude-admin-frontend/src/pages/: agents.rs  analytics.rs  backups.rs  dashboard.rs  docs.rs  github.rs  global_rules.rs  global_skills.rs  help.rs  launch_profiles.rs  licenses.rs  mcp.rs  mcp_browser.rs  mod.rs  permissions.rs  plans.rs  plugins.rs  project_detail.rs  projects.rs  search.rs  sessions.rs  settings.rs  skill_browser.rs  system_prompts.rs  templates.rs  timeline.rs  worktrees.rs
claude-admin-frontend/tests/: api_test.rs
claude-admin-shared/: Cargo.toml
claude-admin-shared/src/: lib.rs
packaging/macos/: Info.plist  launcher
packaging/windows/: installer.nsi  launcher.bat
uat-reports/: BACKLOG.md  uat-report-2026-02-23-v5.html  uat-report-2026-03-06.html
