[package]
name = "claude-admin-backend"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claude-admin-shared = { path = "../claude-admin-shared" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["fs", "full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["cors", "compression-br", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rust-embed = "8"
mime_guess = "2"
regex = "1"
notify = { version = "6", features = ["macos_fsevent"] }
pulldown-cmark = "0.10"
syntect = "5"
hmac = "0.12"
sha2 = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
