[package]
name = "claude-admin-frontend"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
claude-admin-shared = { path = "../claude-admin-shared" }
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "HtmlInputElement", "HtmlSelectElement", "Event", "Window", "Location", "Storage", "Navigator"] }
